# ChangeLog for app-office/akonadi-server
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/ChangeLog,v 1.71 2012/03/07 13:53:53 johu Exp $

*akonadi-server-1.7.1 (07 Mar 2012)

  07 Mar 2012; Johannes Huber <johu@gentoo.org> +akonadi-server-1.7.1.ebuild:
  Version bump.

*akonadi-server-1.7.0 (25 Jan 2012)

  25 Jan 2012; Johannes Huber <johu@gentoo.org> +akonadi-server-1.7.0.ebuild:
  Version bump. Required for KDE SC 4.8.0.

  22 Jan 2012; Johannes Huber <johu@gentoo.org> -akonadi-server-1.5.2-r1.ebuild,
  -akonadi-server-1.6.2.ebuild:
  Remove old.

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org>
  akonadi-server-1.6.2-r1.ebuild:
  Stable for amd64, wrt bug #396359

  10 Jan 2012; Brent Baude <ranger@gentoo.org> akonadi-server-1.6.2-r1.ebuild:
  Marking akonadi-server-1.6.2-r1 ppc for bug 396359

  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  akonadi-server-1.6.2-r1.ebuild:
  x86 stable wrt bug #396359

*akonadi-server-1.6.2-r1 (20 Dec 2011)
*akonadi-server-1.5.2-r1 (20 Dec 2011)

  20 Dec 2011; Johannes Huber <johu@gentoo.org> +akonadi-server-1.5.2-r1.ebuild,
  +akonadi-server-1.6.2-r1.ebuild, -akonadi-server-1.3.1.ebuild,
  -files/akonadi-server-1.6.0_Fix_crash_on_agent_launcher_exit.patch,
  metadata.xml:
  Remove old. Rev bump fix available driver array fill, bug #395165. Thanks to
  jer to show the root path of the solution.

  07 Dec 2011; Markos Chandras <hwoarang@gentoo.org>
  akonadi-server-1.6.2.ebuild:
  Stable on amd64 wrt bug #388279

  07 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  akonadi-server-1.6.2.ebuild:
  x86 stable wrt bug #388279

  19 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -akonadi-server-1.5.3.ebuild, -akonadi-server-1.6.0.ebuild,
  -akonadi-server-1.6.0-r1.ebuild:
  Cleanup

  17 Oct 2011; Jeroen Roovers <jer@gentoo.org> akonadi-server-1.3.1.ebuild,
  akonadi-server-1.5.2.ebuild, akonadi-server-1.5.3.ebuild,