@@ -8,17 +8,23 @@ DIST akonadi-1.7.1.tar.bz2 210853 RMD160 39ddd2e37437ea5bbc912f5994684a1413bad06
 EBUILD akonadi-server-1.5.2.ebuild 2584 RMD160 4f6887690b628625bf47de41f23950c92bc1b381 SHA1 c0b02f63b700c88ba6689aaf15c35f21d32f5f4e SHA256 34062df58567a7f3056c25db5d9679a1d8639b26ae9874b5bc60cf0cd475a6a1
 EBUILD akonadi-server-1.6.2-r1.ebuild 2621 RMD160 c2993992ef09fb392baf53408f39ccfc9e1cc6cc SHA1 cf2ad6cf43525794f1282c281a7ea8831f18a7a5 SHA256 2048d1c0ddb9c386aaba1e1567c8df46d325290698497d28030113c372645592
 EBUILD akonadi-server-1.7.0.ebuild 2595 RMD160 482a8513c09e6f57652f2b824c0c7e15487c1b13 SHA1 86358eba8401483ee8d6e08ee6eaaf257f8b6abe SHA256 3fb055a4ab2735cec19dcee7afc117bc2254f4545b61a09872094adc9039565f
-EBUILD akonadi-server-1.7.1.ebuild 2595 RMD160 62821940c26f28d69e740490cfbd353cb674b0d1 SHA1 47e2fb86cceb90234ea6b100a75ba5c37109b8eb SHA256 cc3e5d77c09709ef3ca2540358a5b54906d33f87cd6b3129baf341b6b1fb3df0
-MISC ChangeLog 10984 RMD160 da04637b8cbde319d3f29fe66ed95a47b4acb7a6 SHA1 58bd22d8d517813c86693aecaeb59cb5bf1ca38a SHA256 f448ec5cdf5c246dc4db193ce33351a79cf75ab807acb2e7dc8d69cefb331f43
+EBUILD akonadi-server-1.7.1.ebuild 2628 RMD160 c9672eb71e3d4de0ee89310f849769c16b597b1b SHA1 16e900f2eb6fd64f086f25e809bacd7709f4540b SHA256 ee0dbd9ab50e22789bc22a0561e0f7a30b7d1e32f393fb6c3d69cea919bdaa4e
+MISC ChangeLog 11107 RMD160 4c8f79440a6b56249f5e113c0de5110a54985d2e SHA1 11c9f15c3e27ac45696002a728d2dfb4615a81d3 SHA256 37799949f50bd0108adcd15663bdd0fae5ee3581b748ce3f0def28deb25570db
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPV2nFAAoJEO+t9ga+3I3a21MH/jORE6g5Qx+XqEx3g5iaaGeC
-4C7LdulFS9dsgaQcdD9v+dT0enq7+ZrBC+jh5NXhyBTdaUwo/jMZzbQXTqM8YOxd
-gqfw7GYLZXFUH/NfJVemp23OQ/q4P0kyOvX437hrhFZE3YvIYmfUXqfth60a8Gmg
-tGeNfudruOqEQ4b6xmv9uxvW9PTNZWmXxnlZ8PuGWmgRR+F3BAQMItZx22fPyEbi
-eXR0BD40w8OtJkGKQXfTfPkI9D+ooQstyEQnRd5YALnA6peGwaKsR3QN9VqLMJ9Q
-w19Hd7yUAlcnKewC8bdIkjV+GbuCUqdGZr+rGlWhq//PAUkc0AQcS8Q6ul4jMi0=
-=MjKT
+iQIcBAEBCgAGBQJPV9tAAAoJEEb+UGWnxTyHwqEP/2x+GvdxVnV21nqxgogJiRuU
+08T9ENZDFkPZDv3xXrbtRuA0EXyIbuujmZQsHds//+5PrsrRQmZGsT0btt/wEIXa
+Ytrgrsgjz6MgTDX4sZRY3HY8bew8dDX11n7LpbFgUlg/Bfu3YjpkL0B+UHgCQj8a
+a8xdGKIBBeeulKXn5ao4fN93gA7gBwb5EctktS+sh04Rpo6E/NIqUpeXHi8lCPYB
+2TS4YxK9JNJvF+eEvmsMDwzROt1p2LFZpOsxg7iMcA5g/5LtA8baBaSj1rtPAkRf
+B2MMngZA2iyHfGpQRGyji6BXfakIiSgP8UnsaOu+mzHAUHokk4vsYc0SExayDbTS
+oL2oD3anYYfdO20ABR8eUXggb8pZ2fyyGKZ/c3e0obQwNmTAPJ2zM5jGdgG2PmbT
+J1HoYirCWWZ5vRH25TpVM9efLudr+4LjNr/V5ykBpFHeiNKTDF3kBcF49pC93mNB
+3b/urRCB5qWTAuMzSCYL1S0NF79cmW2/6Tg2wMu3445C06bYAWgAkY+iCgJfjawS
+RZAJ1Elr9EzsTvk2ZLTqUGh8OMWTl5R7puB0tGersuwUMvoBdwCGutaNs2vMf6JF
+jgyFJhwB3Kac1pcnrLNK+tH/qCH3V9QzwQzEqhdskGLu3m+8Bqaj7aQWyx4CUove
+8hDFkMlhq0BqVuVEqOLf
+=Tgj0
 -----END PGP SIGNATURE-----
