@@ -1,6 +1,10 @@
 # ChangeLog for app-office/akonadi-server
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/ChangeLog,v 1.71 2012/03/07 13:53:53 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/ChangeLog,v 1.72 2012/03/07 22:02:54 dilfridge Exp $
+
+  07 Mar 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  akonadi-server-1.7.1.ebuild:
+  Restrict tests, bug 401139
 
 *akonadi-server-1.7.1 (07 Mar 2012)
 
